# pyaqueduct

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml  requirements.txt  versions.json
.devcontainer/: devcontainer.json
.github/workflows/: automated_release.yaml  docs.yaml  pull_request.yaml  release.yaml  static_analysis_and_tests.yaml
aqueductpy/: __init__.py  api.py  exceptions.py  experiment.py
aqueductpy/client/: __init__.py  client.py
aqueductpy/schemas/: mutations.py  queries.py
ci/: build_release.sh  integration_tests.sh
containers/: Dockerfile
containers/integration_tests/: Dockerfile  docker-compose.yml
docs/: api-reference.md  extensions.md  index.md  plugins.md
examples/: tutorial_notebook.ipynb
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api-reference/: index.html
main/extensions/: index.html
main/getting-started/: index.html
main/search/: search_index.json
pyaqueduct/: __init__.py  api.py  exceptions.py  experiment.py  extensions.py  plugin.py  settings.py  task.py
pyaqueduct/client/: __init__.py  client.py  extension_types.py  plugin_types.py  task_types.py  types.py
pyaqueduct/schemas/: mutations.py  queries.py
scripts/: build_coverage_report.sh  build_docs.sh  build_tutorial.sh  run_integration_tests.sh  run_pylint.sh  run_unit_tests.sh
tests/integration/: test_api.py
tests/unittests/: mock.py  test_api.py  test_client.py  test_experiment.py
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.8/: 404.html  index.html  sitemap.xml
(+3 files in other folders)
